# GraphOptim

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  build.sh
applications/: CMakeLists.txt  global_mapper.cc  global_mapper.h  global_mapper_controller.cc  global_mapper_controller.h  global_mapper_options.h  run_global_mapper.cc  run_global_sfm.sh.in  utils.cc  utils.h
cmake/: CMakeConfig.cmake.in  CMakeHelper.cmake  FindGFlags.cmake  FindGlog.cmake  FindGtest.cmake
data/synthetic/: 1000_2.g2o  1000_5.g2o  100_2.g2o  100_5.g2o  200_2.g2o  200_5.g2o  20_2.g2o  20_5.g2o  5000_2.g2o  5000_5.g2o  500_2.g2o  500_5.g2o  50_2.g2o  50_5.g2o
examples/: CMakeLists.txt  position_estimator.cc  rotation_estimator.cc  view_graph_synthesizer.cc
scripts/: dependencies.sh
src/: CMakeLists.txt
src/geometry/: CMakeLists.txt  align_point_clouds.cc  align_point_clouds.h  rotation.cc  rotation.h  rotation_test.cc  rotation_utils.cc  rotation_utils.h  rotation_utils_test.cc  track_builder.cc  track_builder.h
src/graph/: CMakeLists.txt  color_gradient.h  edge.h  graph.h  graph.inl  graph_cut.cc  graph_cut.h  graph_cut_test.cc  graph_test.cc  node.h  svg_drawer.h  triplet_extractor.h  union_find.cc  union_find.h  union_find_test.cc  view_graph.cc  view_graph.h  view_graph_test.cc
src/math/: CMakeLists.txt  distribution.h  matrix_square_root.cc  matrix_square_root.h  sparse_cholesky_llt.cc  sparse_cholesky_llt.h
src/rotation_averaging/: CMakeLists.txt  hybrid_rotation_estimator.cc  hybrid_rotation_estimator.h  hybrid_rotation_estimator_test.cc  irls_rotation_local_refiner.cc  irls_rotation_local_refiner.h  l1_rotation_global_estimator.cc  l1_rotation_global_estimator.h  lagrange_dual_rotation_estimator.cc  lagrange_dual_rotation_estimator.h  lagrange_dual_rotation_estimator_test.cc  robust_l1l2_rotation_estimator.cc  robust_l1l2_rotation_estimator.h  robust_l1l2_rotation_estimator_test.cc  rotation_estimator.h
src/rotation_averaging/internal/: rotation_estimator_util.h
src/solver/: CMakeLists.txt  bcm_sdp_solver.h  constrained_l1_solver.cc  constrained_l1_solver.h  l1_solver.h  l1_solver_test.cc  rank_restricted_sdp_solver.cc  rank_restricted_sdp_solver.h  rbr_sdp_solver.cc  rbr_sdp_solver.h  riemannian_staircase.cc  riemannian_staircase.h  sdp_solver.h  solver_options.h  summary.h
src/test/: CMakeLists.txt  view_graph_generator.cc  view_graph_generator.h  view_graph_generator_test.cc
src/translation_averaging/: CMakeLists.txt  linear_position_estimator.cc  linear_position_estimator.h  lud_position_estimator.cc  lud_position_estimator.h  lud_position_estimator_test.cc  position_estimator.h
src/util/: CMakeLists.txt  alignment.h  hash.h  map_util.h  random.cc  random.h  random.inl  random_test.cc  stringprintf.cc  stringprintf.h  threading.cc  threading.h  timer.cc  timer.h  timer_test.cc  types.h  util.h
src/utils/: CMakeLists.txt  alignment.h  hash.h  map_util.h  progressbar.h  random.cc  random.h  random.inl  random_test.cc  threading.cc  threading.h  threading_test.cc  timer.cc  timer.h  timer_test.cc  types.h  util.h
